chore: update section reference of  2.1- Python Basics

--- a/atom/2-data-tools-1/2.2-python-basics.md
+++ b/atom/2-data-tools-1/2.2-python-basics.md
@@ -278,4 +278,7 @@ if name == 'main': n = int(raw_input().strip())
 * Python Basic Tutorials: [Python Keywords, Identifiers and Variables for Beginners](https://www.techbeamers.com/python-keywords-identifiers-variables/)
 * Python Tutorials: [Python Tutorial](https://www.w3schools.com/python/default.asp)
 * Python Snippets: [Python Snippets - 30 seconds of code](https://www.30secondsofcode.org/python/p/1)
+* Python import: Advanced Techniques and Tips: [Python import: Advanced Techniques and Tips](https://realpython.com/python-import/)
+* Github - python-refresher: [python-refresher](https://github.com/tecladocode/python-refresher/tree/master)
+* Python Functions Tutorial: [Python Functions Tutorial](https://www.datacamp.com/tutorial/functions-python-tutorial)
 
