feat: update section 5.1 - Database Design

--- a/atom/5-sql-and-database-design/5.1-database-design.md
+++ b/atom/5-sql-and-database-design/5.1-database-design.md
@@ -1,2 +1,44 @@
 # 5.1 - Database Design
 
+## Database (DB) - Cơ sở dữ liệu
+
+> Là cấu trúc các nhóm data, lưu trữ trên bộ nhớ hoặc trên cloud, cho phép truy nhập để trích xuất dữ liệu bằng nhiều cách thức khác nhau
+
+-   Cấu trúc một DB phải giúp cho việc lưu trữ an toàn, tiết kiệm, linh động và bền vững. Đồng thời, việc trích xuất dữ liệu dễ dàng, nhanh chóng, và hiệu quả.
+-   Dạng DB đề cập trong Atom chủ yếu là **Relational Database** =\> Đây là dạng cấu trúc:
+    -   Dữ liệu được tổ chức và lưu trữ dưới dáng bảng (tables)
+    -   Đặc trưng có các keys (Primary Keys - PK, Foreign Keys - FK) để biểu diễn/quy định mối quan hệ giữa các bảng. Chính nhờ các keys này, ta có thể kết nối các bảng khác nhau.
+    -   Việc tách dữ liệu thành các bảng giúp việc tổ chức dữ liệu được linh động, lưu trữ hiệu quả hơn. Nhưng vẫn đảm bảo việc dễ dàng kết nối các bảng bằng keys
+-   Ngoài ra, còn có dạng **Non-relational Database** các bạn có thể tìm hiểu thêm ([Databases 101](https://towardsdatascience.com/databases-101-introduction-to-databases-for-data-scientists-ee18c9f0785d))
+
+## DB Design
+
+> Là quá trình thiết kế và tổ chức dữ liệu theo mô hình Database. Thiết kế quy định những dữ liệu gì được lưu trữ, tổ chức các bảng được lưu trữ như thế nào, và các bảng data liên quan đến nhau ra sao.
+
+-   **Thiết kế DB cần thoả mãn**:
+    1.  Hạn chế trùng lặp trong lưu trữ thông tin
+    2.  Keys chỉ mối quan hệ của các bảng (PK, FK) hợp lý
+    3.  Kiểm tra tính đúng đắn (liên hệ keys, chất lượng data)
+    4.  Hỗ trợ hiệu quả nhất cho quá trình xử lý, phân tích và báo cáo
+
+## Pandas vs. SQL
+
+- SQL Là ngôn ngữ dùng để trích xuất, xử lý và phân tích data trên Rational Database
+- Python Pandas và SQL dù là 2 ngôn ngữ khác nhau, nhưng về cách thức thao tác và chuyển đổi data thì như nhau
+- Tuỳ theo từng tình huống cụ thể mà ta sẽ sử dụng Python Pandas hay SQL
+
+Nhưng các bước thao tác/khám phá/tổng hợp data căn bản nhất gồm:
+
+| Thao tác         | SQL                | Python                          | SpreadSheet   |
+| ---------------- | ------------------ | ------------------------------- | ------------- |
+| Filter/Selection | WHERE              | df['col']                       | Filter        |
+| Join Data        | JOIN               | .join()                         | \-            |
+| Group Data       | GROUP BY           | .groupby(col)                   | Pivot         |
+| Summarize        | SUM, AVG, MIN, MAX | .sum(), .mean(), .min(), .max() | SUM, MIN, MAX |
+
+- Tìm hiểu cách thao tác bằng Pandas. [Pandas CheatSheet](https://pandas.pydata.org/Pandas_Cheat_Sheet.pdf) =\> Xem các phần:
+  -   **Subset(Rows & Columns)**
+  -   **Summarize Data**: Để làm các phép tổng hợp, thống kê
+  -   **Group Data**: Tương đương với Pivot trong Excel và `GROUP BY` trong SQL
+  -   **Combine Data**: Tương đương với `JOIN` trong SQL
+  -   **Plot**
